Revert "fix the toc overlap source block"
This reverts commit ba78fb8f8007e7e2b76e7239ee0151f7457b0a03.

--- a/content/css/copy-to-clipboard.css
+++ b/content/css/copy-to-clipboard.css
@@ -89,7 +89,3 @@
     opacity: 1;
     transition: none;
 }
-
-.w-60 {
-    width: 60%;
-}
